# Python/Flask/swagger.yaml
@@ -8,9 +8,17 @@ info:
 servers:
   - url: http://localhost:5000
 paths:
-  /backoffice:
+  /backoffice/role={role}:
     get:
       summary: Affiche la page de gestion des feature flags (Backoffice)
+      parameters:
+        - in: path
+          name: role
+          required: true
+          schema:
+            type: string
+            enum: [admin, sre]
+          description: Le rôle de l'utilisateur pour accéder au backoffice.
       responses:
         '200':
           description: La page HTML du backoffice.
@@ -18,6 +26,8 @@ paths:
             text/html:
               schema:
                 type: string
+        '403':
+          description: Accès refusé si le rôle n'est pas 'admin' ou 'sre'.
 
   /flags:
     get:
